# psyduk_raffle

./: Anchor.toml  Cargo.toml  LICENSE  README.md  crank.js  package-lock.json  package.json  raffle.js
programs/psyduk_raffle/: Cargo.toml
programs/psyduk_raffle/src/: lib.rs
tests/: psyduk_raffle.ts
tg-bot/: Cargo.toml
tg-bot/src/: .env  check_eligibility.rs  check_transaction.rs  main.rs
